# powonline

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  MANIFEST.in  QA.txt  README.rst  TODO  alembic.ini  api.env.dist  app.ini.dist  autoapp.py  dev-container-requirements.txt  docker-compose.yml  docker-entrypoint  entry-points.ini  fabfile.py  fastapi_shim.py  migration.py  powonline.wsgi  pyproject.toml  pytest-travis.ini  pytest.ini  requirements.txt  run-api.sh  run-prod.sh  set_config  setup.py  tasks.py  upgrade-db.bash
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  initialise.bash  logging.yaml  sample-data.sql
.github/workflows/: publish.yml
alembic/: env.py
alembic/versions/: 157ac81c287f_plain_pwd.py  3ee5e487c3e5_initial.py
database/: Dockerfile  Makefile
database/alembic/: env.py
database/init_script/: 0002-extensions.sql  0003-migrate.sh  createdb.sql
deployment/: fetch-mails.bash  start.bash
frontend/: npm  vue
frontend/docker-npm/: Dockerfile  docker-entry-point
frontend/docker-vue/: Dockerfile  docker-entry-point
frontend/powonline/: .gitignore  README.md  index.html  package.json
powonline/: auth.py  cli.py  config.py  core.py  dependencies.py  error_handlers.py  exc.py  httputil.py  mailfetcher.py  main.py  model.py  pusher.py  resources.py  rootbp.py  schema.py  social.py  util.py  version.txt  web.py  wsgi.py
powonline/resources/: assignment.py  audit.py  dashboard.py  job.py  questionnaire.py  route.py  station.py  team.py  upload.py  user.py
powonline/routers/: __init__.py  app.py  auth.py
sample-files/: app.ini
tests/: conftest.py  seed.sql  seed_cleanup.sql  test_core.py  test_frontent_helpers.py  test_public_api.py  test_route.py  test_station.py  test_team.py  test_user.py  util.py
(+71 files in other folders)
