[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "powonline"
version = "2024.04.28"
authors = [
    {name = "Michel Albert", email = "michel@albert.lu"},
]
description = "Tracker for PowWow 2017"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = []
dependencies = [
    "bcrypt",
    "config-resolver >= 5.0, <6.0",
    "flask",
    "flask-restful",
    "flask-sqlalchemy",
    "gouge >= 2.0",
    "imapclient",
    "pydantic[email]",
    "pillow",
    "psycopg[binary]",
    "pusher",
    "pyjwt",
    "python-dateutil",
    "requests_oauthlib",
    "sqlalchemy >= 2.0",
]

[project.optional-dependencies]
dev = [
    "alembic",
    "blessings",
    "gouge",
    "types-Flask-SQLAlchemy",
    "types-Pillow",
    "types-python-dateutil",
]
test = [
    "flask-testing",
    "pytest",
    "pytest-catchlog",
    "pytest-coverage",
    "pytest-env",
    "pytest-xdist",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["powonline*"]

[project.entry-points."flask.commands"]
grant-admin = "powonline.cli:grant_admin"
revoke-admin = "powonline.cli:revoke_admin"
list-users = "powonline.cli:list_users"
add-local-user = "powonline.cli:add_local_user"
import-csv = "powonline.cli:import_csv"
fetch-mails = "powonline.cli:fetch_mails"

[tool.black]
line_length = 80

[tool.isort]
profile = "black"
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
use_parentheses = true
virtual_env = "env"

[tool.pylint."messages control"]
disable = ["C0330", "C0326"]

[tool.pylint.format]
max-line-length = "80"

[tool.yamlfix]
line_length = 80
sequence_style = "block_style"
